--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "keyfob-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "~8.7.0"
+  },
   "dependencies": {
     "@reedsa/react-scripts": "0.2.1",
     "enzyme": "^3.1.0",
